--- a/app/src/main/res/layout/activity_bulletin.xml
+++ b/app/src/main/res/layout/activity_bulletin.xml
@@ -1,84 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.post.PostDetailActivity">
+    android:orientation="vertical"
+    tools:context=".activity.board.post.PostDetailActivity">
+
+    <TextView
+        android:id="@+id/bulletinTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingStart="15dp"
+        android:paddingTop="8dp"
+        android:paddingEnd="15dp"
+        android:paddingBottom="10dp"
+        android:text="Title"
+        android:textColor="@color/black"
+        android:textSize="40sp" />
+
+    <TextView
+        android:id="@+id/bulletinAuth"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="15dp"
+        android:text="Auth"
+        android:textColor="@color/black"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/bulletinBody"
+        android:layout_width="match_parent"
+        android:layout_height="490dp"
+        android:background="@drawable/blue_border"
+        android:paddingStart="15dp"
+        android:paddingTop="20dp"
+        android:paddingEnd="15dp"
+        android:text="Body"
+        android:textColor="@color/black"
+        android:textSize="20sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/bulletinTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="15dp"
-            android:paddingTop="8dp"
-            android:paddingBottom="10dp"
-            android:text="Title"
-            android:textColor="@color/black"
-            android:textSize="40dp" />
-
-        <TextView
-            android:id="@+id/bulletinAuth"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="15dp"
-            android:text="Auth"
-            android:textColor="@color/black"
-            android:textSize="20dp" />
-
-        <TextView
-            android:id="@+id/bulletinBody"
-            android:layout_width="match_parent"
-            android:layout_height="490dp"
-            android:paddingLeft="15dp"
-            android:paddingTop="20dp"
-            android:text="Body"
-            android:background="@drawable/blue_border"
-            android:textColor="@color/black"
-            android:textSize="20dp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
         <Button
             android:id="@+id/btn_delpost"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/ic_baseline_restore_from_trash_24"
-            />
+            android:background="@drawable/ic_baseline_restore_from_trash_24" />
+
         <Button
             android:id="@+id/btn_LikePost"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_marginStart="110dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/ic_baseline_favorite_24"
-            android:layout_marginLeft="110dp"
-            />
+            android:background="@drawable/ic_baseline_favorite_24" />
+
         <TextView
             android:id="@+id/bulletinLike"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="likes"
-            android:textStyle="bold"
-            android:textColor="@color/black"
             android:layout_gravity="center"
-            />
+            android:textColor="@color/black"
+            android:textStyle="bold" />
+
         <Button
             android:id="@+id/btn_modpost"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:layout_marginStart="100dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/ic_baseline_edit_24"
-            android:layout_marginLeft="100dp"
-            />
-
-        </LinearLayout>
+            android:background="@drawable/ic_baseline_edit_24" />
 
     </LinearLayout>
-</RelativeLayout>
+
+</LinearLayout>
