--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.BoardActivity">
+    tools:context=".activity.board.BoardActivity">
+
     <include layout="@layout/toolbar" />
+
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
@@ -18,7 +20,6 @@
     </androidx.viewpager2.widget.ViewPager2>
 
     <com.getbase.floatingactionbutton.FloatingActionsMenu
-        android:id="@+id/fab_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
