--- a/app/src/main/res/layout/activity_memo.xml
+++ b/app/src/main/res/layout/activity_memo.xml
@@ -1,58 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.memo.MemoDetailActivity">
+    android:orientation="vertical"
+    tools:context=".activity.board.memo.MemoDetailActivity">
+
+    <TextView
+        android:id="@+id/memoTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingStart="15dp"
+        android:paddingTop="8dp"
+        android:paddingEnd="15dp"
+        android:paddingBottom="10dp"
+        android:text="Title"
+        android:textColor="@color/black"
+        android:textSize="40sp" />
+
+    <TextView
+        android:id="@+id/memoBody"
+        android:layout_width="match_parent"
+        android:layout_height="540dp"
+        android:background="@drawable/blue_border"
+        android:paddingStart="15dp"
+        android:paddingTop="20dp"
+        android:paddingEnd="15dp"
+        android:text="Body"
+        android:textColor="@color/black"
+        android:textSize="20sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/memoTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="15dp"
-            android:paddingTop="8dp"
-            android:paddingBottom="10dp"
-            android:text="Title"
-            android:textColor="@color/black"
-            android:textSize="40dp" />
+        <Button
+            android:id="@+id/del_Button"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="4.5dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="300dp"
+            android:background="@drawable/ic_baseline_restore_from_trash_24" />
 
-        <TextView
-            android:id="@+id/memoBody"
-            android:layout_width="match_parent"
-            android:layout_height="540dp"
-            android:paddingLeft="15dp"
-            android:paddingTop="20dp"
-            android:text="Body"
-            android:background="@drawable/blue_border"
-            android:textColor="@color/black"
-            android:textSize="20dp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <Button
-                android:id="@+id/del_Button"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginLeft="4.5dp"
-                android:layout_marginRight="300dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/ic_baseline_restore_from_trash_24"
-                 />
-
-            <Button
-                android:id="@+id/mod_button"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/ic_baseline_edit_24" />
-        </LinearLayout>
-
+        <Button
+            android:id="@+id/mod_button"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/ic_baseline_edit_24" />
     </LinearLayout>
-</RelativeLayout>
+
+</LinearLayout>
