--- a/app/src/main/res/layout/activity_modify_memo.xml
+++ b/app/src/main/res/layout/activity_modify_memo.xml
@@ -1,51 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activity.memo.MemoDetailActivity">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    tools:context=".activity.board.memo.MemoDetailActivity">
+
+    <EditText
+        android:id="@+id/mod_memoTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Title"
+        android:importantForAutofill="no"
+        android:inputType="textNoSuggestions"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:textColor="@color/black"
+        android:textSize="25sp" />
+
+    <EditText
+        android:id="@+id/mod_memoBody"
+        android:layout_width="match_parent"
+        android:layout_height="580dp"
+        android:hint="Body"
+        android:importantForAutofill="no"
+        android:inputType="textNoSuggestions"
+        android:paddingStart="20dp"
+        android:paddingEnd="20dp"
+        android:textColor="@color/black"
+        android:textSize="20sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
-        <EditText
-            android:id="@+id/mod_memoTitle"
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/ok_mod_button"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="20dp"
-            android:text="Title"
-            android:textColor="@color/black"
-            android:textSize="25dp" />
+            android:layout_marginStart="110dp"
+            android:text="수정" />
 
-        <EditText
-            android:id="@+id/mod_memoBody"
-            android:layout_width="match_parent"
-            android:layout_height="580dp"
-            android:paddingLeft="20dp"
-            android:text="Body"
-            android:textColor="@color/black"
-            android:textSize="20dp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <Button
-                android:id="@+id/ok_mod_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="110dp"
-                android:text="수정" />
-
-            <Button
-                android:id="@+id/cancel_mod_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:text="취소" />
-        </LinearLayout>
+        <Button
+            android:id="@+id/cancel_mod_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:text="취소" />
     </LinearLayout>
-
-</RelativeLayout>
+</LinearLayout>
