--- a/app/src/main/res/layout/activity_personal_setup.xml
+++ b/app/src/main/res/layout/activity_personal_setup.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activity.PersonalSetupActivity">
+    tools:context=".activity.setup.PersonalSetupActivity">
 
     <TextView
-        android:id="@+id/wiAreUHere"
         android:layout_width="314dp"
         android:layout_height="200dp"
         android:layout_marginStart="27dp"
@@ -16,46 +14,46 @@
         android:layout_marginBottom="35dp"
         android:text="Wi \nAre U\nHere?"
         android:textColor="@color/app_blue"
-        android:textSize="50dp"
+        android:textSize="50sp"
         android:textStyle="bold" />
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
 
         <EditText
             android:id="@+id/nickname"
             android:layout_width="186dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="25dp"
+            android:layout_marginStart="25dp"
             android:layout_marginBottom="4dp"
             android:background="@drawable/edittext_border"
             android:gravity="center"
+            android:importantForAutofill="no"
+            android:inputType="textPersonName"
+            android:labelFor="@id/nickname"
             android:textColor='@color/black'
-            android:textSize="15dp" />
+            android:textSize="15sp" />
 
         <Button
             android:id="@+id/editNickname"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:layout_gravity="right"
-            android:layout_marginLeft="4dp"
+            android:layout_gravity="start"
+            android:layout_marginStart="4dp"
             android:layout_marginTop="2dp"
-            android:layout_toRightOf="@id/nickname"
+            android:layout_toEndOf="@id/nickname"
             android:backgroundTint="@color/app_blue"
             android:text="Change"
-            android:textSize="15dp" />
+            android:textSize="15sp" />
 
     </RelativeLayout>
+
     <View
-        android:id="@+id/line2"
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_marginBottom="16dp"
         android:background="@color/app_blue" />
-
-
 
     <TextView
         android:id="@+id/set_notification"
@@ -65,45 +63,42 @@
         android:layout_marginBottom="21dp"
         android:text="알림설정"
         android:textColor="@color/darkgrey"
-        android:textSize="20dp" />
+        android:textSize="20sp" />
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/push_notification"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="27dp"
 
-        android:text="푸시알림"
-        android:textColor="@color/black"
-        android:textSize="15dp" />
+        <TextView
+            android:id="@+id/push_notification"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="27dp"
+            android:text="푸시알림"
+            android:textColor="@color/black"
+            android:textSize="15sp" />
 
-    <Switch
-        android:id="@+id/push_switch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="90dp"
-        android:layout_gravity="right"
-        android:checked="false"
-        android:theme="@style/PushSwitch" />
+        <com.google.android.material.switchmaterial.SwitchMaterial
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="90dp"
+            android:checked="false"
+            android:theme="@style/PushSwitch" />
+
     </FrameLayout>
 
     <TextView
-        android:id="@+id/app_infomation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="14dp"
         android:text="앱 정보"
         android:textColor="@color/darkgrey"
-        android:textSize="20dp" />
+        android:textSize="20sp" />
 
     <TextView
-        android:id="@+id/ourTeamInfo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
