--- a/app/src/main/res/layout/memo_layout.xml
+++ b/app/src/main/res/layout/memo_layout.xml
@@ -25,7 +25,7 @@
 
                 <TextView
                     android:id="@+id/memo_title"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:paddingLeft="10dp"
@@ -33,8 +33,7 @@
                     android:paddingRight="10dp"
                     android:text="This is memo"
                     android:textColor="@color/black"
-                    android:textSize="20sp"
-                    />
+                    android:textSize="20sp" />
 
             </LinearLayout>
 
