--- a/app/src/main/res/layout/activity_memo.xml
+++ b/app/src/main/res/layout/activity_memo.xml
@@ -5,46 +5,46 @@
     android:layout_height="match_parent"
     tools:context=".activity.memo.MemoDetailActivity">
 
-    <LinearLayout
+
+    <TextView
+        android:id="@+id/memoTitle"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:paddingLeft="15dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="10dp"
+        android:text="Title"
+        android:textColor="@color/black"
+        android:textSize="40dp" />
 
-        <TextView
-            android:id="@+id/memoTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="15dp"
-            android:paddingTop="8dp"
-            android:paddingBottom="10dp"
-            android:text="Title"
-            android:textColor="@color/black"
-            android:textSize="40dp" />
-
-        <TextView
-            android:id="@+id/memoBody"
-            android:layout_width="match_parent"
-            android:layout_height="540dp"
-            android:paddingLeft="15dp"
-            android:paddingTop="20dp"
-            android:text="Body"
-            android:background="@drawable/blue_border"
-            android:textColor="@color/black"
-            android:textSize="20dp" />
+    <TextView
+        android:id="@+id/memoBody"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/memoTitle"
+        android:layout_above="@+id/bottomlayout"
+        android:background="@drawable/blue_border"
+        android:paddingLeft="15dp"
+        android:paddingTop="20dp"
+        android:text="Body"
+        android:textColor="@color/black"
+        android:textSize="20dp" />
 
         <LinearLayout
+            android:id="@+id/bottomlayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="60dp">
 
             <Button
                 android:id="@+id/del_Button"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginLeft="4.5dp"
-                android:layout_marginRight="300dp"
                 android:layout_marginTop="10dp"
-                android:background="@drawable/ic_baseline_restore_from_trash_24"
-                 />
+                android:layout_marginRight="300dp"
+                android:background="@drawable/ic_baseline_delete_24" />
 
             <Button
                 android:id="@+id/mod_button"
@@ -54,5 +54,5 @@
                 android:background="@drawable/ic_baseline_edit_24" />
         </LinearLayout>
 
-    </LinearLayout>
+
 </RelativeLayout>
