--- a/app/src/main/res/layout/activity_modify_memo.xml
+++ b/app/src/main/res/layout/activity_modify_memo.xml
@@ -25,6 +25,7 @@
             android:layout_height="580dp"
             android:paddingLeft="20dp"
             android:text="Body"
+            android:gravity="top"
             android:textColor="@color/black"
             android:textSize="20dp" />
 
