--- a/app/src/main/res/menu/menu_option.xml
+++ b/app/src/main/res/menu/menu_option.xml
@@ -7,10 +7,7 @@
         android:title="로그아웃"
         app:showAsAction="never" />
 
-    <item
-        android:id="@+id/goNotification"
-        android:title="알림목록"
-        app:showAsAction="never" />
+
 
     <item
         android:id="@+id/personalSettings"
@@ -21,6 +18,11 @@
         android:id="@+id/WiFiRegister"
         android:title="와이파이 등록하기"
         android:icon="@drawable/ic_star"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/goNotification"
+        android:title="알림목록"
+        android:icon="@drawable/ic_baseline_notifications_24"
         app:showAsAction="ifRoom" />
 
 </menu>
