--- a/app/src/main/res/layout/activity_personal_setup.xml
+++ b/app/src/main/res/layout/activity_personal_setup.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".activity.PersonalSetupActivity">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
 
     <TextView
         android:id="@+id/wiAreUHere"
@@ -112,7 +116,7 @@
         android:textColor="@color/darkgrey"
         android:textSize="20dp" />
     <TextView
-        android:id="@+id/logout"
+        android:id="@+id/logoutTextview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="27dp"
@@ -145,6 +149,9 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="25dp"
         android:text="Developed by 김예찬, 김윤호, 민지원, 박민석, 조연겸\n\nMajoring in Software at Gachon University" />
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="100dp"/>
 
 </LinearLayout>
+</ScrollView>
