--- a/app/src/main/res/layout/activity_modify_bulletin.xml
+++ b/app/src/main/res/layout/activity_modify_bulletin.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.post.PostDetailActivity">
+    tools:context=".activity.board.post.PostDetailActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
